--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,14 @@
     "postcss": ">=8.4.6",
     "tailwindcss": "^3.4.4"
   },
+  "resolutions": {
+    "nth-check": ">=2.0.1",
+    "**/nth-check": ">=2.0.1",
+    "postcss": ">=8.4.31",
+    "**/postcss": ">=8.4.31",
+    "path-to-regexp": ">=0.1.12",
+    "**/path-to-regexp": ">=0.1.12"
+  },
   "scripts": {
     "start": "HOST=0.0.0.0 react-scripts start",
     "build": "react-scripts build",
