Added deepseek API, still trying to fix vulnerabilities

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Alice Project",
-  "name": "Alice Workflow Manager: Agentic workflows made easy",
+  "short_name": "Project Alice",
+  "name": "Project Alice: Agentic workflows made easy",
   "icons": [
     {
       "src": "logo_alice.ico",
