--- a/template.env
+++ b/template.env
@@ -6,8 +6,9 @@ COHERE_API_KEY=
 LLAMA_API_KEY=
 GEMINI_API_KEY=
 MISTRAL_API_KEY=
-# OTHER
 GROQ_API_KEY=
+DEEPSEEK_API_KEY=
+# OTHER
 GOOGLE_CSE_ID=
 GOOGLE_API_KEY=
 GOOGLE_KNOWLEDGE_GRAPH_API_KEY=
